manifests/istio/istio-microservice-demo/istio-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nodejs-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - "micro.example.com"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: nodejs-cert-prod
    hosts:
      - "micro.example.com"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
 name: nodejs
spec:
 hosts:
 - "micro.example.com"
 gateways:
 - nodejs-gateway
 http:
 - route:
   - destination:
       host: nodejs
       subset: v1
     weight: 80
   - destination:
       host: nodejs
       subset: v2
     weight: 20
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nodejs
spec:
  host: nodejs
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
